fix(link): multiline hit area gap (#DS-3562)

--- a/packages/components/link/_link-theme.scss
+++ b/packages/components/link/_link-theme.scss
@@ -5,6 +5,9 @@
 @mixin kbq-link-geometry() {
     display: inline;
 
+    padding-top: var(--kbq-link-size-multiline-hit-area-gap);
+    box-decoration-break: clone;
+
     text-decoration: none;
     cursor: pointer;
 
